--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -42,6 +42,8 @@
                     <div  class = "text-center pt-4">
                         <p class = "mb-0">Don’t have an account?</p>
                         <button type="button" class="btn" routerLink="/signup">Signup</button>
+                        <button type="button" class="btn" routerLink="/forgot-password">Forgot Password ?</button>
+
                      </div>
                     <div class = "background">
                         <div class = "shape"></div>
