--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -26,7 +26,7 @@
                 <div class="cart-item">
                   <table>
                       <tbody>
-                          <tr *ngFor="let cart of cart.cartitem">
+                          <tr *ngFor="let cart of productitem">
                               <!-- <td><img src = "assets/img/product/product.png"></td> -->
                               <!-- <div class="" *ngIf="cart.length != 0"> -->
                               <td><div class="cart_product_img"><img src="{{cart.image}}"></div></td>
